2003/06/22 13:37 pcg

        * gtk-demo/*: fix various minor problems, including using
        binmode for binary streams, and removing misleading "use bytes".
        * xs/GdkPixbufLoader.xs: the right way to access scalars is *not*
        SvPVX, but SvPV. Also removed "count" from ->write, since strings
        in perl are always counted and exposing this c-ism gives no benefit.
        * Makefile.PL: change the glib-not-found error message to the perl
        standard.
        * xs/GdkWindow.xs: enabled various non-deprecated methods I needed
        but weren't implemented yet, plus some rarely used ones.
        * t/01.GtkWindow.t: compare references with == not eq, and
        "$x == undef" is not the right way to tets defined'ness.

2003/06/20 11:33 muppetman

	* Gtk2.pm, README: bump version for 0.24 release

	* Makefile.PL: just seeing if Glib is available isn't enough, make
	sure it's recent enough, too.  oh, and bump the required glib 
	version while we're at it

2003/06/19 13:46 joered
	* xs/GdkColor.xs: added accessors for GdkColor struct members.

2003/06/19 00:58 pcg

	* Makefile.PL: write a fake Makefile using PREREQ when important
        modules are missing, this ensures auto-installation within CPAN.

2003/06/18 10:48 muppetman

	* Gtk2.pm: catch undefined values to hush warnings

	* xs/GtkMenu.xs, xs/GtkItemFactory.xs: change stack handling to
	avoid attempting to free undef.

2003/06/17 18:21 muppetman

	* gtk2perl.h, xs/GtkObject.xs: push sink functions into Glib, 
	to avoid some problems in which GtkObject created via 
	Glib::Object->new don't have gtk_object_sink called on them.

2003/06/16 22:25 muppetman

	* xs/GdkColor.xs, gtk-demo/drawingarea.pl: not sure how the GBoxed
	change could excite this, but suddenly gdk_color_free is very unhappy
	with the GdkColors created by Gtk2::Gdk::Color->new and ->parse.
	fixed by using gdk_color_copy instead of g_new.  freaky.

2003/06/16 22:21 pcg
